2006-12-14  Brian Bidulock  <bidulock@openss7.org>

	- debian script corrections from Michael Fig <fig@marketsystems.com>

	* debian/mscript_postinst.in: debian script corrections
	* debian/mscript_postrm.in: debian script corrections
	* debian/mscript_preinst.in: debian script corrections
	* debian/rules.in: debian script corrections
	* debian/striso-devel.preinst.in: debian script corrections

2006-12-08  Brian Bidulock  <bidulock@openss7.org>

	* src/util/init/striso.sh: debian init script name correction

2006-10-30  Brian Bidulock  <bidulock@openss7.org>

	* tests/local.at: added ability to sync between test cases

2006-10-27  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: change linux/config.h to autoconf.h for 2.6.18

2006-10-21  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/striso.refs: updated streams release number
	* striso.lsm.in: updated LiS release number
	* debian/control.in: updated LiS release number
	* doc/manual/releases.texi: updated LiS release number

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/Makefile.am: manpage fixups for release
	* doc/man/man4/iso-lan.4.man: manpage fixups for release
	* doc/man/man4/itos.4.man: manpage fixups for release
	* doc/man/man4/itot.4.man: manpage fixups for release
	* doc/man/man4/lapb.4.man: manpage fixups for release
	* doc/man/man4/lpp.4.man: manpage fixups for release
	* doc/man/man4/ns-tcp.4.man: manpage fixups for release
	* doc/man/man4/plp.4.man: manpage fixups for release
	* doc/man/striso.refs: manpage fixups for release

	* acinclude.m4: removed redundant debug flags
	* src/drivers/tp.c: removed redundant debug flags
	* src/modules/itot.c: got this module compiling

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* doc/man/man4/clns.4.man: updates for release
	* doc/man/man4/cmot.4.man: updates for release
	* doc/man/man4/ISO.4.man: updates for release
	* doc/man/man4/iso-ip.4.man: updates for release