@@ -2,7 +2,7 @@
 # BEGINNING OF SEPARATE COPYRIGHT MATERIAL vim: ft=config sw=4 noet nocin nosi
 # =============================================================================
 # 
-# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.9 $) $Date: 2006/10/27 23:05:04 $
+# @(#) $RCSfile: acinclude.m4,v $ $Name:  $($Revision: 0.9.2.10 $) $Date: 2006/12/18 08:24:46 $
 #
 # -----------------------------------------------------------------------------
 #
@@ -47,7 +47,7 @@
 #
 # -----------------------------------------------------------------------------
 #
-# Last Modified $Date: 2006/10/27 23:05:04 $ by $Author: brian $
+# Last Modified $Date: 2006/12/18 08:24:46 $ by $Author: brian $
 #
 # =============================================================================
 
@@ -332,8 +332,8 @@ AC_DEFUN([_ISO_CONFIG], [dnl
 AC_DEFUN([_ISO_STRCONF], [dnl
     strconf_cv_stem='lis.conf'
     strconf_cv_input='Config.master'
-    strconf_cv_majbase=250
-    strconf_cv_midbase=80
+    strconf_cv_majbase=206
+    strconf_cv_midbase=120
     if test ${streams_cv_package:-LfS} = LfS ; then
 	if test ${linux_cv_minorbits:-8} -gt 8 ; then
 dnl
